tests/ixml_not_001_simple_prefix.test
START
book = !"chapter", [L]+.
INPUT
chapter chopper
OUTPUT
ixml:1:1: syntax error
chapter chopper
^
END
